2011-08-12  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/dshgroup.c :
	  Use read_wcoll_path instead of read_wcoll.

	* src/pdsh/wcoll.c, src/pdsh/wcoll.h :
	  Add read_wcoll_path to read wcoll from a path,
	  with #include syntax.

2011-07-26  Mark Grondona <mgrondona@llnl.gov>

	* scripts/dshbak :
	  Properly handle coalescing hosts across 9,10 99,100
	  boundaries when zero-padding is in effect. e.g. 09-10
	  099-100, etc. (Fixes issue 33).

	* tests/t5000-dshbak.sh:
	  Add tests for proper compress over zero-pad boundaries
	  like 09-10 and 099-100, etc.

2011-04-29  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.26.

	* tests/Makefile.am, tests/Makefile.in :
	  Run runtests.sh during "make check" instead of
	  individual tests. This allows running tests under
	  SHELL_PATH.

	* tests/runtests.sh :
	  Exit non-zero from runtests.sh if any tests fail.

	* tests/runtests.sh :
	  Use $SHELL_PATH to invoke tests. Set SHELL_PATH to
	  /usr/bin/bash and GIT_TEST_CMP to cmp on AIX.

	* tests/t0006-pdcp.sh :
	  Avoid using GNU-specific options to utilities like
	  cp(1) and diff(1) for better portability. Replace explicit
	  calls to diff with $GIT_TEST_CMP where possible.

	* tests/test-lib.sh, tests/t0001-basic.sh,
	  tests/t0006-pdcp.sh, tests/t2001-ssh.sh :
	  Use $SHELL_PATH in place of hard-coded /bin/sh in
	  internal scripts and tests.

	* tests/t0001-basic.sh :
	  Don't log manufactured test failures used to test cleanup
	  where they would be reported by aggregate-results.sh.

2011-04-28  Mark Grondona <mgrondona@llnl.gov>

	* scripts/dshbak :
	  Simplify concatenation of compressed hosts in print_header
	  by using join() instead of the obscure $" variable.

2011-04-27  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/privsep.c :
	  Fallback to rresvport when we don't have rresvport_af.

	* configure.ac, configure, config.h.in :
	  Add check for rresvport_af function.

	* doc/pdsh.1.in :
	  Document use of %u %h %n in PDSH_SSH_ARGS.
